--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,11 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.24.0",
     "@supabase/supabase-js": "^2.39.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.25",
+    "@types/multer": "^1.4.13",
+    "@types/node": "^20.10.0",
+    "@types/uuid": "^9.0.8",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -22,17 +27,12 @@
     "multer": "^1.4.5-lts.1",
     "node-tesseract-ocr": "^2.2.1",
     "sharp": "^0.33.0",
+    "typescript": "^5.3.0",
     "uuid": "^9.0.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.25",
-    "@types/multer": "^1.4.13",
-    "@types/node": "^20.10.0",
-    "@types/uuid": "^9.0.8",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.0"
+    "ts-node-dev": "^2.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
