--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.24.0",
+    "@google/generative-ai": "^0.24.0",
     "@supabase/supabase-js": "^2.39.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.25",
